Shrink input labels to help avoid accidental clicks on mobile

--- a/styles/edit.css
+++ b/styles/edit.css
@@ -38,6 +38,10 @@ along with Grevillea. If not, see <https://www.gnu.org/licenses/>.
 	}
 }
 
+.section-edit label {
+	width: fit-content;
+}
+
 .input-clearable {
 	display: flex;
 	flex-direction: row;
